# game-editor

./: .gitignore  GPL.txt  README.md  _BaseConfiguration.props  _BaseConfiguration.vsprops  android-arm-linux.rules  arm-linux.props  arm-linux.rules  arm-linux.targets  arm-linux.xml  compilation.txt  gameEditor-Info.plist  gameEditor.sln  license.txt  makefile  structAlign.txt  structSize.txt
Graphviz/: Doxyfile  Makefile.in  aclocal.m4  compat_getopt.h  config.h  config.h.in  configure  graphviz.spec  graphviz.spec.in  iffe
Graphviz/lib/plugin/: Makefile.am  Makefile.in  Makefile.old  gvlayout_dot_layout.c  gvlayout_neato_layout.c  gvplugin_dot_layout.c  gvplugin_neato_layout.c  gvplugin_usershape_gd.c  gvusershape_gd.c  plugin.dsp  plugin.mak
Graphviz/tclpkg/tclstubs/: Makefile.am  Makefile.in  tclInt.h  tclStubLib.c
LLVM/: ASTConsumers.cpp  llvm.h  llvm_codes.cpp
PocketHAL/: PocketHAL.txt
RakNet/: RakNet.txt  RakNet.vcproj  makefile.raknet
SDL/: SDL_joystick.d  config.sub  load_ogg.c  ltmain.sh  music.c  sdl version.txt
SDL13/: configure
gameEditor/: AboutDlg.cpp  AboutDlg.h  ActorProperty.cpp  ActorProperty.h  ActorText.cpp  ActorText.h  AddActionDialog.cpp  AddActionDialog.h  AddActor.cpp  AddActor.h  AddPathDialog.cpp  AddPathDialog.h  AddSequenceDialog.cpp  AddSequenceDialog.h  AdsControl.cpp  AdsControl.h  AdsShow.cpp  AdsShow.h  BaseAction.cpp  BaseAction.h  CDataFile.cpp  CDataFile.h  ChangeAnimation.cpp  ChangeAnimation.h  ChangeAnimationDirection.cpp  ChangeAnimationDirection.h  ChangeCursor.cpp  ChangeCursor.h  ChangeParent.cpp  ChangeParent.h  ChangePath.cpp  ChangePath.h  ChangeResolution.cpp  ChangeResolution.h  ColorPicker.cpp  ColorPicker.h  ConditionalAction.cpp  ConditionalAction.h  Config.cpp  Config.h  (+110 more)
gameEngine/: Action.cpp  Action.h  Actor.h  (+111 more)
kyra/: ChangeLog  Kyra.dsw  Makefile.am  Makefile.in  MakefileKyra  NEWS  README  aclocal.m4  configure  configure.in  kyra-config.in  kyra.h  kyra.m4  license.txt  makefiledefines  mkinstalldirs
kyra/docs/: build.html  changes.html  community.html  contributors.html  demo.html  download.html  engine.html  index.html  installation.html  kryaFAQ.html  kryaIsometricFAQ.html  kyraxml.html  license.html  project.html  releasenotes.html  tools.html  toolsEncoder.html  toolsSpriteEditor.html
kyra/docs/api/: KrImageListBox_8h-source.html  action_8h-source.html  annotated.html  box_8h-source.html  boxresource_8h-source.html  button_8h-source.html  canvas_8h-source.html  canvasresource_8h-source.html  classGlDynArray-members.html  classGlDynArray.html  classGlFixed-members.html  classGlFixed.html  classGlIntArraySet-members.html  classGlIntArraySet.html  classGlIsoMath-members.html  classGlIsoMath.html  classGlRandom-members.html  classGlRandom.html  classGlSList-members.html  classGlSList.html  classGlSListIterator-members.html  classGlSListIterator.html  classIKrWidgetListener-members.html  classIKrWidgetListener.html  classKrAction-members.html  classKrAction.html  classKrBinaryDataResource-members.html  classKrBinaryDataResource.html  classKrBox-members.html  classKrBox.html  classKrBoxResource-members.html  classKrBoxResource.html  classKrButton-members.html  classKrButton.html  classKrCanvas-members.html  classKrCanvas.html  classKrCanvasResource-members.html  classKrCanvasResource.html  classKrColorTransform-members.html  classKrColorTransform.html  (+126 more)
kyra/encoder/: Makefile.am  Makefile.in  MakefileKyra  encoder.dsp  font.h  main.cpp  output.cpp
kyra/engine/: ENGINE.VCL  ENGINE.VCO  ENGINE.VCP  FastSprite.cpp  FastSprite.h  Makefile.am  Makefile.in  Makefile.win  MakefileKyra  RTree.h  action.cpp  action.h  box.cpp  box.h  boxresource.cpp  boxresource.h  canvas.cpp  canvas.h  canvasresource.cpp  canvasresource.h  color.cpp  color.h  dataresource.cpp  dataresource.h  dirtyrectangle.cpp  dirtyrectangle.h  encoder.cpp  encoder.h  engine.cpp  engine.dev  engine.dsp  engine.h  engine.lnt  engine.vcproj  engine.vcxproj  engine.vcxproj.filters  engineSymbian.dsp  fontresource.cpp  fontresource.h  image.cpp  (+46 more)
kyra/gui/: Makefile.am  Makefile.in  UndoFrame.cpp  UndoFrame.h  button.cpp  button.h  colorscheme.c  colorscheme.h  console.cpp  console.h  eventmanager.cpp  eventmanager.h  listbox.cpp  listbox.h  textwidget.cpp  textwidget.h  widget.cpp  widget.h
kyra/guiExtended/: KrImageListBox.cpp  KrImageListBox.h  Makefile.am  Makefile.in  progress.cpp  progress.h
kyra/guitest/: Makefile.am  Makefile.in  MakefileKyra  guitest.cpp  guitest.dsp  guitest.dsw
kyra/spriteed/: CONSOLEFONT.cpp  CONSOLEFONT.h  Makefile.am  Makefile.in  MakefileKyra  SpriteEd.dsp  boximage.cpp  boximage.h  dom.cpp  dom.h  sharedstate.cpp  sharedstate.h  spritedom.cpp  spritedom.h  spriteed.cpp  statealign.cpp  statehelp.cpp  statemachine.cpp  statemachine.h  statemovie.cpp  states.h  stateview.cpp
kyra/tests/: INSTALL  Makefile.am  Makefile.in  MakefileKyra  aclocal.m4  allship.pcx  allship.xml  arialfont.xml  bem.pcx  bem.xml  bem2.xml  bemFloorTile2.pcx  bemParticle.tga  bemPlasma.tga  bemgame.cpp  bemlist.txt  blitter.cpp  blttest.cpp  configure  configure.in  consolefont.h  consolefont.xml  demos.cpp  demos.dsp  demos.h  encodeall  encodeall.bat  font.cpp  font.h  gamefactory.cpp  poem.txt  scale.cpp  shooter.cpp  sinwave.cpp  space.cpp  space.h  spritetest.cpp  standardtest.h  standardtest.tga  standardtest.xml  (+6 more)
kyra/tinyxml/: Makefile.am  Makefile.in  tinyxml.cpp  tinyxml.h  tinyxmlerror.cpp  tinyxmlparser.cpp
kyra/tutorial1/: Makefile  code_a.cpp  code_b.cpp  code_c.cpp  code_d.cpp  tutorial1.dsp  tutorial1.h  tutorial1.tga  tutorial1.xml
kyra/util/: Makefile.am  Makefile.in  glbitstream.cpp  glbitstream.h  glcirclelist.h  gldebug.cpp  gldebug.h  gldynarray.h  glfixed.cpp  glfixed.h  glfixed_base.h  glgraph.cpp  glgraph.h  glinsidelist.h  glintarrayset.cpp  glintarrayset.h  glisomath.cpp  glisomath.h  gllist.h  glmap.cpp  glmap.h  glmemorypool.cpp  glmemorypool.h  glperformance.cpp  glperformance.h  glprime.cpp  glprime.h  glrandom.cpp  glrandom.h  glstack.h  glstring.cpp  glstring.h  gltypes.h  glutil.cpp  glutil.h
(+3025 files in other folders)
