bin_PROGRAMS = krspriteed
krspriteed_SOURCES = CONSOLEFONT.cpp \
CONSOLEFONT.h \
dom.cpp \
sharedstate.cpp \
spriteed.cpp \
statealign.cpp \
stateempty.cpp \
statemachine.cpp \
statemovie.cpp \
stateview.cpp \
statehelp.cpp \
boximage.h \
dom.h \
sharedstate.h \
spritedom.h \
statemachine.h \
statemovie.h \
states.h 


krspriteed_LDADD = ../engine/libkyra.la \
../gui/libgui.la \
@SDL_LIBS@
