dnl Process this file with autoconf to produce a configure script.
AC_INIT(Kyra-demo, 2.0.4, kyra-general@lists.sourceforge.net)
AC_PREREQ(2.52)
AC_CANONICAL_HOST
AC_CANONICAL_TARGET

AC_LANG(C)

AM_INIT_AUTOMAKE(Kyra-demo, 2.0.4)

dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AM_PROG_LIBTOOL
AC_PROG_LIBTOOL

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([limits.h memory.h stdlib.h string.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
dnl AC_C_INLINE

dnl Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([atexit memset sqrt strchr strrchr strstr strtoul])

dnl Checks for libraries.
dnl Check SDL version
SDL_VERSION=1.2.0
AM_PATH_SDL($SDL_VERSION,
            :,
            AC_MSG_ERROR([*** SDL version $SDL_VERSION not found!])
)

dnl Add the SDL preprocessor flags and libraries to the build process
LDFLAGS="-L/usr/lib -L/usr/local/lib -L/usr/X11R6/lib"
CFLAGS="$CFLAGS $SDL_CFLAGS -I/usr/local/include -I/usr/X11R6/include"
CXXFLAGS="$CXXFLAGS $SDL_CFLAGS -DDEBUG -I/usr/local/include -I/usr/X11R6/include"
LIBS="$LIBS $SDL_LIBS"

dnl "borrowed" and modified from Bill Kendrick's Circus Linux
AC_CHECK_LIB(SDL_image, main,
             LIBS="$LIBS -lSDL_image",
             AC_MSG_ERROR([*** SDL_image library not found!])
            )


dnl Check for Kyra

dnl AC_LANG_PUSH(C++)
dnl AC_CHECK_LIB(kyra, main,
dnl             [LIBS="$LIBS -lkyra"],
dnl             AC_MSG_ERROR([*** Kyra not installed please do so!])
dnl             )
dnl AC_LANG_POP()

dnl **** NOW USING kyra-config ****
KYRA_VERSION=2.0.4
AC_LANG_PUSH(C++)
AM_PATH_KYRA($KYRA_VERSION,
            :,
            AC_MSG_ERROR([*** KYRA version $KYRA_VERSION not found!])
)
AC_LANG_POP()

dnl Add the SDL preprocessor flags and libraries to the build process
LDFLAGS="-L/usr/lib -L/usr/local/lib -L/usr/X11R6/lib"
CFLAGS="$CFLAGS $KYRA_CFLAGS -I/usr/local/include -I/usr/X11R6/include"
CXXFLAGS="$CXXFLAGS $KYRA_CFLAGS -DDEBUG -I/usr/local/include -I/usr/X11R6/include"
LIBS="$LIBS $KYRA_LIBS"



dnl Check if user wants OpenGL support... if not don't check
dnl set nogl to 0 first
nogl=0
AC_ARG_WITH(opengl, [supply this if you want OpenGL support], 
AC_CHECK_LIB(GL, main,
             [LIBS="$LIBS -lGL"; CXXFLAGS="$CXXFLAGS -DKYRA_SUPPORT_OPENGL"],
             [echo "OpenGL not found.. disabling"]
	    ), [nogl=1])

AM_CONDITIONAL(NOGL, [test $nogl = 1])
	     
AC_SUBST(SDL_CFLAGS)

AC_OUTPUT(Makefile)

