noinst_LTLIBRARIES = libutil.la


libutil_la_SOURCES = gldebug.cpp \
glbitstream.cpp \
glgraph.cpp \
glintarrayset.cpp \
glisomath.cpp \
glmap.cpp \
glmemorypool.cpp \
glperformance.cpp \
glprime.cpp \
glrandom.cpp \
glstring.cpp \
glutil.cpp \
glcirclelist.h \
gldebug.h \
gldynarray.h \
glfixed.h \
glgraph.h \
glinsidelist.h \
glintarrayset.h \
glisomath.h \
gllist.h \
glmap.h \
glmemorypool.h \
glperformance.h \
glprime.h \
glrandom.h \
glstack.h \
glstring.h \
gltypes.h \
glutil.h

libutil_la_CFLAGS = @SDL_CFLAGS@
